# mtng

./: .gitignore  README.md  create.py  full.tex  noxfile.py  prs.txt  pyproject.toml  schema.json  schema.md
.github/workflows/: test.yml
src/cassandra/: cli.py  spec.py
src/cassandra/template/: main.tex
src/mtng/: __init__.py  cli.py  collect.py  generate.py  spec.py
src/mtng/template/: base.tex  item.tex  item_context.tex  macros.tex  main.tex  preamble.tex  provides.tex  repo.tex
template/: main.tex
tests/: acts_spec.yml  test_collect.py  test_generate.py
tests/ref/: merged_prs.json  open_prs.json  reference.tex  stale.json
