[tool.poetry]
name = "mtng"
version = "0.1.0"
description = ""
authors = ["Paul Gessinger <hello@paulgessinger.com>"]
packages = [
    { include = "mtng", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.17.1"
Jinja2 = "^2.11.3"
requests = "^2.25.1"
typer = "^0.3.2"
python-dateutil = "^2.8.1"
aiohttp = "^3.7.4"
gidgethub = "^5.0.1"
pydantic = "^1.8.2"
PyYAML = "^5.4.1"

[tool.poetry.scripts]
mtng = 'mtng.cli:cli'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
