[tool.poetry]
name = "mtng"
version = "0.4.1"
description = ""
authors = ["Paul Gessinger <hello@paulgessinger.com>"]
packages = [
    { include = "mtng", from = "src" },
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.17.1"
Jinja2 = "^3.1.1"
requests = "^2.25.1"
typer = "^0.6.1"
python-dateutil = "^2.8.1"
aiohttp = "^3.7.4"
gidgethub = "^5.0.1"
pydantic = "^1.8.2"
PyYAML = "^5.4.1"
pytest-asyncio = "^0.19.0"
pytest-dotenv = "^0.5.2"

[tool.poetry.scripts]
mtng = 'mtng.cli:cli'

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
nox = "^2022.8.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
